# wesense-iroh-sidecar

./: .gitignore  Cargo.toml  Dockerfile  entrypoint.sh
.github/workflows/: docker-build.yml
src/: api.rs  config.rs  discovery.rs  gossip.rs  index.rs  main.rs  replicator.rs  store.rs
