[package]
name = "wesense-iroh-sidecar"
version = "0.1.0"
edition = "2021"
description = "Iroh blob store + gossip sidecar for WeSense storage gateway"

[dependencies]
iroh = "0.96"
iroh-blobs = { version = "0.98", features = ["fs-store"] }
iroh-gossip = "0.96"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
bytes = "1"
blake3 = "1"
n0-future = "0.1"
hex = "0.4"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
